--- a/unknown_srj679.public.json
+++ b/unknown_srj679.public.json
@@ -6,15 +6,15 @@
 	"sector": "K_8332",
 	"sec_level": 2,
 	"date_added": 1570224703381,
-	"last_scraped": 1570237446511,
+	"last_scraped": 1570238760449,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1570224703381
 		}
 	],
-	"pl_output": "Please specify a command with nav:\"<commammand name>\"-- access directory with nav:\"list\"",
-	"next_scrape": 1570319069495,
-	"updt": 1570236363622,
-	"edit": 10
+	"pl_output": "Please specify a command with nav:\"<command name>me>\"-- access directory with nav:\"list\"",
+	"next_scrape": 1570322632880,
+	"updt": 1570237493922,
+	"edit": 11
 }
