--- a/unknown_srj679.loc.json
+++ b/unknown_srj679.loc.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_srj679.loc",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "timeout",
 	"script": "unknown_srj679.loc",
 	"sector": "K_8332",
 	"sec_level": 2,
 	"date_added": 1570224703381,
-	"last_scraped": 1570241282938,
+	"last_scraped": 1570242636819,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,7 +14,7 @@
 		}
 	],
 	"pl_output": "{\"ok\":false,\"msg\":\"You must transfer an amount as a GC string or a whole number. Examples: \\\"1KGC\\\" or 1000\"}",
-	"next_scrape": 1570328125870,
-	"updt": 1570240200477,
-	"edit": 13
+	"next_scrape": 1570325212100,
+	"updt": 1570241327563,
+	"edit": 14
 }
