--- a/unknown_srj679.public.json
+++ b/unknown_srj679.public.json
@@ -6,15 +6,15 @@
 	"sector": "K_8332",
 	"sec_level": 2,
 	"date_added": 1570224703381,
-	"last_scraped": 1570241293746,
+	"last_scraped": 1570242654148,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1570224703381
 		}
 	],
-	"pl_output": "Please specify a command with nav:\"<commommand name>\"-- access directory with nav:\"list\"",
-	"next_scrape": 1570329659303,
-	"updt": 1570240200477,
-	"edit": 13
+	"pl_output": "Please specify a command with nav:\"<command nd name>\"-- access directory with nav:\"list\"",
+	"next_scrape": 1570325776187,
+	"updt": 1570241327563,
+	"edit": 14
 }
