--- a/unknown_srj679.public.json
+++ b/unknown_srj679.public.json
@@ -6,15 +6,15 @@
 	"sector": "K_8332",
 	"sec_level": 2,
 	"date_added": 1570224703381,
-	"last_scraped": 1570243951884,
+	"last_scraped": 1570245248813,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1570224703381
 		}
 	],
-	"pl_output": "Please specify a command with nav:\"<command nd name>\"-- access directory with nav:\"list\"",
-	"next_scrape": 1570323689419,
-	"updt": 1570242683110,
-	"edit": 15
+	"pl_output": "Please specify a command with nav:\"<:\"<command name>\"-- access directory with nav:\"list\"",
+	"next_scrape": 1570333449571,
+	"updt": 1570244037476,
+	"edit": 16
 }
