--- a/unknown_srj679.public.json
+++ b/unknown_srj679.public.json
@@ -6,15 +6,15 @@
 	"sector": "K_8332",
 	"sec_level": 2,
 	"date_added": 1570224703381,
-	"last_scraped": 1570246560850,
+	"last_scraped": 1570247808440,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1570224703381
 		}
 	],
-	"pl_output": "Please specify a command with nav:\"<command namname>\"-- access directory with nav:\"list\"",
-	"next_scrape": 1570331673979,
-	"updt": 1570245391691,
-	"edit": 17
+	"pl_output": "Please specify a command with nav:\"<commommand name>\"-- access directory with nav:\"list\"",
+	"next_scrape": 1570334808861,
+	"updt": 1570246743268,
+	"edit": 18
 }
