--- a/unknown_srj679.public.json
+++ b/unknown_srj679.public.json
@@ -6,15 +6,15 @@
 	"sector": "K_8332",
 	"sec_level": 2,
 	"date_added": 1570224703381,
-	"last_scraped": 1570247808440,
+	"last_scraped": 1570249042162,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1570224703381
 		}
 	],
-	"pl_output": "Please specify a command with nav:\"<commommand name>\"-- access directory with nav:\"list\"",
-	"next_scrape": 1570334808861,
-	"updt": 1570246743268,
-	"edit": 18
+	"pl_output": "Please specify a command with nav:\"<commanmand name>\"-- access directory with nav:\"list\"",
+	"next_scrape": 1570339888988,
+	"updt": 1570247870528,
+	"edit": 19
 }
