--- a/unknown_srj679.public.json
+++ b/unknown_srj679.public.json
@@ -6,15 +6,15 @@
 	"sector": "K_8332",
 	"sec_level": 2,
 	"date_added": 1570224703381,
-	"last_scraped": 1570249042162,
+	"last_scraped": 1570250338043,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1570224703381
 		}
 	],
-	"pl_output": "Please specify a command with nav:\"<commanmand name>\"-- access directory with nav:\"list\"",
-	"next_scrape": 1570339888988,
-	"updt": 1570247870528,
-	"edit": 19
+	"pl_output": "{\"ok\":false,\"msg\":\"RUNTIME ERROR amal_robo.public: Shift operation is currently in progress. 256s remain\"}",
+	"next_scrape": 1570343788842,
+	"updt": 1570249221688,
+	"edit": 20
 }
