--- a/unknown_srj679.public.json
+++ b/unknown_srj679.public.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_srj679.public",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "could not json",
 	"script": "unknown_srj679.public",
 	"sector": "K_8332",
 	"sec_level": 2,
@@ -15,6 +15,6 @@
 	],
 	"pl_output": "{\"ok\":false,\"msg\":\"RUNTIME ERROR amal_robo.public: Shift operation is currently in progress. 256s remain\"}",
 	"next_scrape": 1570343788842,
-	"updt": 1570249221688,
-	"edit": 20
+	"updt": 1570250348746,
+	"edit": 21
 }
