--- a/uknown_7hh07e.scrape.json
+++ b/uknown_7hh07e.scrape.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_7hh07e.scrape",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "skip",
 	"script": "uknown_7hh07e.scrape",
 	"sector": "HJG_8314",
 	"sec_level": 4,
 	"date_added": 1562661695663,
-	"last_scraped": 1570272680127,
+	"last_scraped": 1570274700358,
 	"script_log": [
 		{
 			"type": "added",
@@ -22,7 +22,7 @@
 		]
 	],
 	"pl_output": "permit is not a function",
-	"next_scrape": 1570365660914,
-	"updt": 1570271416722,
-	"edit": 2059
+	"next_scrape": 1570359325793,
+	"updt": 1570272994829,
+	"edit": 2060
 }
