--- a/uknown_ypla0j.paypal.json
+++ b/uknown_ypla0j.paypal.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_ypla0j.paypal",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "skip",
 	"script": "uknown_ypla0j.paypal",
 	"sector": "K_7153",
 	"sec_level": 4,
 	"date_added": 1565331884872,
-	"last_scraped": 1570272509118,
+	"last_scraped": 1570274440167,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,7 +14,7 @@
 		}
 	],
 	"pl_output": "`D:::PAYPAL ERROR:::` Please use pay.pal to access your account.",
-	"next_scrape": 1570358635378,
-	"updt": 1570271191640,
-	"edit": 835
+	"next_scrape": 1570353712436,
+	"updt": 1570272994829,
+	"edit": 836
 }
