--- a/unknown_3ib3be.crack1.json
+++ b/unknown_3ib3be.crack1.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_3ib3be.crack1",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "skip",
 	"script": "unknown_3ib3be.crack1",
 	"sector": "NGC_1069",
 	"sec_level": 4,
 	"date_added": 1562706741269,
-	"last_scraped": 1570272700411,
+	"last_scraped": 1570274760095,
 	"script_log": [
 		{
 			"type": "added",
@@ -22,7 +22,7 @@
 		]
 	],
 	"pl_output": "Cannot read property 'call' of undefined",
-	"next_scrape": 1570352360041,
-	"updt": 1570271416722,
-	"edit": 2056
+	"next_scrape": 1570356578605,
+	"updt": 1570272994829,
+	"edit": 2057
 }
