--- a/unknown_42zksa.bombs.json
+++ b/unknown_42zksa.bombs.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_42zksa.bombs",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "skip",
 	"script": "unknown_42zksa.bombs",
 	"sector": "NGC_1810",
 	"sec_level": 4,
 	"date_added": 1563105921244,
-	"last_scraped": 1570272368029,
+	"last_scraped": 1570274277087,
 	"script_log": [
 		{
 			"type": "added",
@@ -22,7 +22,7 @@
 		]
 	],
 	"pl_output": "{\"ok\":false,\"msg\":\"Script access denied.\"}",
-	"next_scrape": 1570358667874,
-	"updt": 1570271191640,
-	"edit": 2045
+	"next_scrape": 1570366576684,
+	"updt": 1570272994829,
+	"edit": 2046
 }
