--- a/uknown_z9w7ru.workshop.json
+++ b/uknown_z9w7ru.workshop.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_z9w7ru.workshop",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_z9w7ru.workshop",
 	"sector": "HJG_5959",
 	"sec_level": 4,
@@ -11,10 +11,14 @@
 		{
 			"type": "added",
 			"when": 1561815721083
+		},
+		{
+			"type": "died",
+			"when": 1570281925846
 		}
 	],
-	"updt": 1568769438870,
-	"edit": 318,
+	"updt": 1568793803935,
+	"edit": 319,
 	"next_scrape": 1568839885627,
 	"category": "coin_flipper",
 	"last_update": 1568793678717,
