--- a/uknown_67mgos.priv.json
+++ b/uknown_67mgos.priv.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_67mgos.priv",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_67mgos.priv",
 	"sector": "SPC_2500",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1563095388516
+		},
+		{
+			"type": "died",
+			"when": 1570379854752
 		}
 	],
 	"next_scrape": 1568852979516,
@@ -90,6 +94,6 @@
 			]
 		}
 	],
-	"updt": 1568797184643,
-	"edit": 213
+	"updt": 1568806654257,
+	"edit": 214
 }
