--- a/unknown_f06mr7.scripts_lib.json
+++ b/unknown_f06mr7.scripts_lib.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_f06mr7.scripts_lib",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_f06mr7.scripts_lib",
 	"sector": "K_4792",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1561324860799
+		},
+		{
+			"type": "died",
+			"when": 1570388560088
 		}
 	],
 	"scrape_ct": 12,
@@ -65,8 +69,8 @@
 			]
 		}
 	],
-	"updt": 1568722736007,
-	"edit": 254,
+	"updt": 1568739933435,
+	"edit": 255,
 	"identified": [
 		{
 			"document": "MFT0XD1_CLST0X95_SECT0X23E7_FILE0X8CAB060B",
