--- a/unknown_tr6phd.offers.json
+++ b/unknown_tr6phd.offers.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_tr6phd.offers",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_tr6phd.offers",
 	"sector": "K_8441",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1562071377214
+		},
+		{
+			"type": "died",
+			"when": 1570394565135
 		}
 	],
 	"next_scrape": 1568775354937,
@@ -42,14 +46,21 @@
 				{
 					"document": "MFT0X68_CLST0XCA_SECT0X0F5F_FILE0X87AF16DE",
 					"frags": [
+						"she w",
 						"need ",
 						"hy Pe",
+						"hem. ",
 						" to d",
 						"hat sh",
+						"e, the",
 						"d why ",
 						"ariabl",
+						"tra? It",
+						"e was d",
+						"designe",
 						"hy we ne",
-						"es you a"
+						"es you a",
+						"a headac"
 					]
 				}
 			]
@@ -81,14 +92,21 @@
 				{
 					"document": "MFT0X68_CLST0XCA_SECT0X0F5F_FILE0X87AF16DE",
 					"frags": [
+						"she w",
 						"need ",
 						"hy Pe",
+						"hem. ",
 						" to d",
 						"hat sh",
+						"e, the",
 						"d why ",
 						"ariabl",
+						"tra? It",
+						"e was d",
+						"designe",
 						"hy we ne",
-						"es you a"
+						"es you a",
+						"a headac"
 					]
 				}
 			]
@@ -120,14 +138,21 @@
 				{
 					"document": "MFT0X68_CLST0XCA_SECT0X0F5F_FILE0X87AF16DE",
 					"frags": [
+						"she w",
 						"need ",
 						"hy Pe",
+						"hem. ",
 						" to d",
 						"hat sh",
+						"e, the",
 						"d why ",
 						"ariabl",
+						"tra? It",
+						"e was d",
+						"designe",
 						"hy we ne",
-						"es you a"
+						"es you a",
+						"a headac"
 					]
 				}
 			]
@@ -137,19 +162,26 @@
 		{
 			"document": "MFT0X68_CLST0XCA_SECT0X0F5F_FILE0X87AF16DE",
 			"frags": [
+				"she w",
 				"need ",
 				"hy Pe",
+				"hem. ",
 				" to d",
 				"hat sh",
+				"e, the",
 				"d why ",
 				"ariabl",
+				"tra? It",
+				"e was d",
+				"designe",
 				"hy we ne",
-				"es you a"
+				"es you a",
+				"a headac"
 			]
 		}
 	],
-	"updt": 1568715067648,
-	"edit": 53,
+	"updt": 1570394637984,
+	"edit": 55,
 	"retry_args": [
 		{
 			"CLICK": true
