--- a/uknown_tzek5a.recursion.json
+++ b/uknown_tzek5a.recursion.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_tzek5a.recursion",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_tzek5a.recursion",
 	"sector": "HJG_6509",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1562434917664
+		},
+		{
+			"type": "died",
+			"when": 1570438055117
 		}
 	],
 	"next_scrape": 1568798184752,
@@ -148,6 +152,6 @@
 			]
 		}
 	],
-	"updt": 1568744219679,
-	"edit": 39
+	"updt": 1568756582935,
+	"edit": 40
 }
