--- a/unknown_495c7w.request.json
+++ b/unknown_495c7w.request.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_495c7w.request",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_495c7w.request",
 	"sector": "HJG_2788",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1563134955013
+		},
+		{
+			"type": "died",
+			"when": 1570515111439
 		}
 	],
 	"next_scrape": 1568730018398,
@@ -145,8 +149,8 @@
 			]
 		}
 	],
-	"updt": 1567714945331,
-	"edit": 22,
+	"updt": 1568687095488,
+	"edit": 23,
 	"retry_args": [
 		{
 			"CLICK": true
