--- a/uknown_fzffni.bot_brain.json
+++ b/uknown_fzffni.bot_brain.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_fzffni.bot_brain",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "dead",
 	"script": "uknown_fzffni.bot_brain",
 	"sector": "K_3804",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1564461987370
+		},
+		{
+			"type": "died",
+			"when": 1570532614137
 		}
 	],
 	"next_scrape": 1568805893957,
@@ -127,6 +131,6 @@
 			]
 		}
 	],
-	"updt": 1568749594127,
-	"edit": 152
+	"updt": 1568760641987,
+	"edit": 153
 }
