--- a/unknown_ticrfg.main_cronscript.json
+++ b/unknown_ticrfg.main_cronscript.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_ticrfg.main_cronscript",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_ticrfg.main_cronscript",
 	"sector": "K_4792",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1561316929498
+		},
+		{
+			"type": "died",
+			"when": 1570541184436
 		}
 	],
 	"next_scrape": 1569090779584,
@@ -54,8 +58,8 @@
 			]
 		}
 	],
-	"updt": 1569043582165,
-	"edit": 305,
+	"updt": 1569047708681,
+	"edit": 306,
 	"identified": [
 		{
 			"document": "MFT0X93_CLST0X0B_SECT0XB1F1_FILE0X17858BD3",
