--- a/unknown_ni4bb3.t1_cracker.json
+++ b/unknown_ni4bb3.t1_cracker.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_ni4bb3.t1_cracker",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_ni4bb3.t1_cracker",
 	"sector": "HJG_5723",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1562214285296
+		},
+		{
+			"type": "died",
+			"when": 1570570588676
 		}
 	],
 	"next_scrape": 1568773341755,
@@ -125,6 +129,6 @@
 			]
 		}
 	],
-	"updt": 1568710107825,
-	"edit": 72
+	"updt": 1568728150786,
+	"edit": 73
 }
