--- a/unknown_czv1dd.looter.json
+++ b/unknown_czv1dd.looter.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_czv1dd.looter",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_czv1dd.looter",
 	"sector": "SPC_7171",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1562518581911
+		},
+		{
+			"type": "died",
+			"when": 1570592185865
 		}
 	],
 	"scrape_ct": 20,
@@ -176,8 +180,8 @@
 			]
 		}
 	],
-	"updt": 1567714945331,
-	"edit": 6,
+	"updt": 1568688223475,
+	"edit": 7,
 	"identified": [
 		{
 			"document": "NOT FOUND",
