--- a/derelict_nnxezh.uick_start.json
+++ b/derelict_nnxezh.uick_start.json
@@ -1,12 +1,12 @@
 {
 	"_id": "derelict_nnxezh.uick_start",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "derelict_nnxezh.uick_start",
 	"sector": "NGC_4040",
 	"sec_level": 4,
 	"date_added": 1565629679587,
-	"last_scraped": 1568794051160,
+	"last_scraped": 1570605747439,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 2,
-	"next_scrape": 1568837357770,
+	"next_scrape": 1570649489547,
 	"category": "plant_sim",
-	"last_update": 1568794051160,
+	"last_update": 1570605747439,
 	"output": [
 		{
 			"args": {},
@@ -46,15 +46,21 @@
 		},
 		{
 			"args": {},
-			"calls": 34690,
+			"calls": 35475,
 			"base": "c:\"35jidh\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
+				"to us",
+				"pted ",
+				"e of ",
 				"appen",
 				"histor",
 				" appro",
+				"nth I'v",
 				"f histo",
 				"y is sti",
-				"tory is "
+				"while hi",
+				"tory is ",
+				"approach"
 			],
 			"hits": [
 				{
@@ -84,6 +90,6 @@
 			]
 		}
 	],
-	"updt": 1568794029015,
-	"edit": 37
+	"updt": 1568794253258,
+	"edit": 38
 }
