--- a/derelict_t9xwp1.wrapper.json
+++ b/derelict_t9xwp1.wrapper.json
@@ -1,12 +1,12 @@
 {
 	"_id": "derelict_t9xwp1.wrapper",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "derelict_t9xwp1.wrapper",
 	"sector": "VNP_7825",
 	"sec_level": 4,
 	"date_added": 1566482303761,
-	"last_scraped": 1568744432240,
+	"last_scraped": 1570605067110,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,18 +14,24 @@
 		}
 	],
 	"scrape_ct": 18,
-	"next_scrape": 1568785062058,
+	"next_scrape": 1570649086787,
 	"category": "fishie_tank",
-	"last_update": 1568744432240,
+	"last_update": 1570605067110,
 	"output": [
 		{
 			"args": {},
-			"calls": 49093,
+			"calls": 53518,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
+				"d san",
+				" Shoo",
 				" ## S",
+				"yeah y",
+				"work o",
+				"s trad ",
 				" tho ##",
 				"ndboxing",
+				"ing gonn",
 				"dboxing ",
 				" is trad"
 			],
@@ -46,7 +52,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 5250,
+			"calls": 6041,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -54,9 +60,15 @@
 				"they don't look so good"
 			],
 			"fragments": [
+				"d san",
+				" Shoo",
 				" ## S",
+				"yeah y",
+				"work o",
+				"s trad ",
 				" tho ##",
 				"ndboxing",
+				"ing gonn",
 				"dboxing ",
 				" is trad"
 			],
@@ -77,12 +89,18 @@
 			"args": {
 				"do": "clean"
 			},
-			"calls": 62628,
+			"calls": 66026,
 			"base": "Fishies are happy. Algea eaters are displeased.",
 			"fragments": [
+				"d san",
+				" Shoo",
 				" ## S",
+				"yeah y",
+				"work o",
+				"s trad ",
 				" tho ##",
 				"ndboxing",
+				"ing gonn",
 				"dboxing ",
 				" is trad"
 			],
@@ -100,8 +118,8 @@
 			]
 		}
 	],
-	"updt": 1568728827801,
-	"edit": 7,
+	"updt": 1568744444074,
+	"edit": 8,
 	"identified": [
 		{
 			"document": "Prisoners",
