--- a/uknown_2q8bmy.decorruptor.json
+++ b/uknown_2q8bmy.decorruptor.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_2q8bmy.decorruptor",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_2q8bmy.decorruptor",
 	"sector": "SPC_6536",
 	"sec_level": 4,
 	"date_added": 1561837134116,
-	"last_scraped": 1568793808529,
+	"last_scraped": 1570605717452,
 	"script_log": [
 		{
 			"type": "added",
@@ -21,25 +21,29 @@
 			}
 		]
 	],
-	"updt": 1568793803935,
-	"edit": 220,
+	"updt": 1568794029015,
+	"edit": 221,
 	"pl_output": "rheaghe.decorruptor{target:#s.cyberdine.public,args:\"arg1:value1,arg2:value2,arg3:value3,etc:etcetera\"}\n\nArguments are optional. All values will be converted to strings\n\nmacro:\rheaghe.decorruptor {{ target:#s.{0}, args:{1} }}",
-	"next_scrape": 1568840237155,
+	"next_scrape": 1570649687047,
 	"scrape_ct": 14,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1568793808529,
+	"last_update": 1570605717452,
 	"output": [
 		{
 			"args": {},
-			"calls": 403645,
+			"calls": 413748,
 			"base": "rheaghe.decorruptor{target:#s.cyberdine.public,args:\"arg1:value1,arg2:value2,arg3:value3,etc:etcetera\"}\n\nArguments are optional. All values will be converted to strings\n\nmacro:\rheaghe.decorruptor {{ target:#s.{0}, args:{1} }}",
 			"fragments": [
 				"in fr",
-				"045 i",
 				"anged t",
 				"y\\n2086 ",
+				"s, Mallo",
+				"ront of ",
+				"ory\\n208",
+				"arranged",
 				"Yes, Mal",
 				"\\n2085 Ye",
+				"\\n2045 in",
 				" them\\n20"
 			],
 			"hits": [
