--- a/uknown_69y5dg.cubit_hash128.json
+++ b/uknown_69y5dg.cubit_hash128.json
@@ -1,21 +1,21 @@
 {
 	"_id": "uknown_69y5dg.cubit_hash128",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_69y5dg.cubit_hash128",
 	"sector": "K_2748",
 	"sec_level": 4,
 	"date_added": 1564086338794,
-	"last_scraped": 1568793125546,
+	"last_scraped": 1570605649964,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564086338794
 		}
 	],
-	"next_scrape": 1568839860467,
+	"next_scrape": 1570649418204,
 	"category": "plant_sim",
-	"last_update": 1568793125546,
+	"last_update": 1570605649964,
 	"output": [
 		{
 			"args": {},
@@ -71,13 +71,19 @@
 		},
 		{
 			"args": {},
-			"calls": 115202,
+			"calls": 115754,
 			"base": "c:\"z138o2\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
+				"re's ",
 				"cific",
 				" case",
+				"we agr",
+				"e's a ",
+				"ally: ",
 				"? ## Y",
 				"ing Mal",
+				"ically:",
+				"Yes. Sp",
 				"se set? ",
 				"# Yes. S"
 			],
@@ -109,6 +115,6 @@
 			]
 		}
 	],
-	"updt": 1568793126104,
-	"edit": 155
+	"updt": 1568793579953,
+	"edit": 156
 }
