--- a/uknown_h7aui7.bot_midsec.json
+++ b/uknown_h7aui7.bot_midsec.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_h7aui7.bot_midsec",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_h7aui7.bot_midsec",
 	"sector": "K_3804",
 	"sec_level": 4,
 	"date_added": 1564547536219,
-	"last_scraped": 1568798189756,
+	"last_scraped": 1570605778558,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,24 +14,30 @@
 		}
 	],
 	"scrape_ct": 16,
-	"next_scrape": 1568838850133,
+	"next_scrape": 1570650816758,
 	"category": "dice_roller",
-	"last_update": 1568798189756,
+	"last_update": 1570605778558,
 	"output": [
 		{
 			"args": {},
-			"calls": 1162146,
+			"calls": 1167613,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
-				"tal s",
 				"ntist",
 				"n't. ",
+				"mists",
 				" is t",
+				"en, th",
 				"answer",
+				"t doesn",
 				"olitica",
-				"l econo",
+				"nmental",
 				"is that",
-				"tand it."
+				"tand it.",
+				"ous answ",
+				"ngineers",
+				"l econom",
+				"ental sc"
 			],
 			"hits": [
 				{
@@ -51,8 +57,8 @@
 			]
 		}
 	],
-	"updt": 1568787485420,
-	"edit": 132,
+	"updt": 1568798313416,
+	"edit": 133,
 	"identified": [
 		{
 			"document": "MFT0XD1_CLST0X95_SECT0X23E7_FILE0X8CAB060B",
