--- a/uknown_rxzrvg.magnara.json
+++ b/uknown_rxzrvg.magnara.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_rxzrvg.magnara",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_rxzrvg.magnara",
 	"sector": "K_7008",
 	"sec_level": 4,
 	"date_added": 1565504050472,
-	"last_scraped": 1568757031898,
+	"last_scraped": 1570605326255,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 17,
-	"next_scrape": 1568802173119,
+	"next_scrape": 1570644942611,
 	"category": "clicker",
-	"last_update": 1568757031898,
+	"last_update": 1570605326255,
 	"output": [
 		{
 			"args": {},
-			"calls": 87252,
+			"calls": 92332,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"e, us",
@@ -52,7 +52,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 71803,
+			"calls": 85635,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"e, us",
@@ -84,7 +84,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 10459,
+			"calls": 11590,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"e, us",
@@ -113,8 +113,8 @@
 			]
 		}
 	],
-	"updt": 1568745344626,
-	"edit": 13,
+	"updt": 1568757259768,
+	"edit": 14,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
