--- a/uknown_wpgu3n.lime.json
+++ b/uknown_wpgu3n.lime.json
@@ -1,21 +1,21 @@
 {
 	"_id": "uknown_wpgu3n.lime",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_wpgu3n.lime",
 	"sector": "K_3804",
 	"sec_level": 4,
 	"date_added": 1564532412979,
-	"last_scraped": 1568740223131,
+	"last_scraped": 1570604893028,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564532412979
 		}
 	],
-	"next_scrape": 1568781546925,
+	"next_scrape": 1570646652533,
 	"category": "plant_sim",
-	"last_update": 1568740223131,
+	"last_update": 1570604893028,
 	"output": [
 		{
 			"args": {},
@@ -147,15 +147,24 @@
 		},
 		{
 			"args": {},
-			"calls": 134289,
+			"calls": 134713,
 			"base": "c:\"8peilp\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
+				"nctio",
 				" like",
+				"s 'Che",
 				". ## s",
 				"to me #",
+				"llowing",
 				"isk to ",
+				"ing sec",
 				"utions. ",
+				"ses foll",
+				"r losses",
+				"o suffer",
+				"nt.\\nSan",
 				"me ## Ri",
+				"losses f",
 				"ike a ri"
 			],
 			"hits": [
@@ -193,6 +202,6 @@
 			]
 		}
 	],
-	"updt": 1568723636398,
-	"edit": 208
+	"updt": 1568740385258,
+	"edit": 209
 }
