--- a/uknown_xw0s65.t1_fast.json
+++ b/uknown_xw0s65.t1_fast.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_xw0s65.t1_fast",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_xw0s65.t1_fast",
 	"sector": "HJG_7908",
 	"sec_level": 4,
 	"date_added": 1565555340989,
-	"last_scraped": 1568793005345,
+	"last_scraped": 1570605638673,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565555340989
 		}
 	],
-	"next_scrape": 1568836109951,
+	"next_scrape": 1570647313690,
 	"category": "coin_flipper",
-	"last_update": 1568793005345,
+	"last_update": 1570605638673,
 	"output": [
 		{
 			"args": {},
-			"calls": 828061,
+			"calls": 838537,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"iting",
@@ -54,6 +54,6 @@
 			]
 		}
 	],
-	"updt": 1568769438870,
-	"edit": 62
+	"updt": 1568793126104,
+	"edit": 63
 }
