--- a/unknown_0o6wpi.paypal.json
+++ b/unknown_0o6wpi.paypal.json
@@ -1,21 +1,21 @@
 {
 	"_id": "unknown_0o6wpi.paypal",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_0o6wpi.paypal",
 	"sector": "HJG_0482",
 	"sec_level": 4,
 	"date_added": 1565327917562,
-	"last_scraped": 1568784938927,
+	"last_scraped": 1570605516756,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565327917562
 		}
 	],
-	"next_scrape": 1568828460258,
+	"next_scrape": 1570648003761,
 	"category": "plant_sim",
-	"last_update": 1568784938927,
+	"last_update": 1570605516756,
 	"output": [
 		{
 			"args": {},
@@ -43,14 +43,20 @@
 		},
 		{
 			"args": {},
-			"calls": 61251,
+			"calls": 62040,
 			"base": "c:\"dep9ej\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
-				"uild w",
+				"y bui",
+				"hey b",
+				"s what",
 				"they do",
 				"t's wha",
+				"ial, it",
 				"ey do. ",
-				"erial, i"
+				"able ma",
+				" it's w",
+				"erial, i",
+				" build w"
 			],
 			"hits": [
 				{
@@ -102,6 +108,6 @@
 			]
 		}
 	],
-	"updt": 1568761318403,
-	"edit": 101
+	"updt": 1568785003241,
+	"edit": 102
 }
