--- a/unknown_bjl3my.extras.json
+++ b/unknown_bjl3my.extras.json
@@ -1,39 +1,42 @@
 {
 	"_id": "unknown_bjl3my.extras",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_bjl3my.extras",
 	"sector": "VNP_2284",
 	"sec_level": 4,
 	"date_added": 1563713987809,
-	"last_scraped": 1568792944196,
+	"last_scraped": 1570605606956,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1563713987809
 		}
 	],
-	"next_scrape": 1568838473182,
+	"next_scrape": 1570648917742,
 	"category": "dice_roller",
-	"last_update": 1568792944196,
+	"last_update": 1570605606956,
 	"output": [
 		{
 			"args": {},
-			"calls": 804404,
+			"calls": 814741,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
+				"ST0X7",
 				"FILE0",
 				"XBF_CL",
 				"7A_SEC",
 				"27_FIL",
 				"_CLST0X",
+				"ILE0X2B",
 				"FT0XBF_",
 				"ECT0XF2",
-				"A\\nAD03",
 				"7D17A\\n",
 				"XF227_FI",
 				"T0XF227_",
 				"A_SECT0X",
+				"7A\\nAD03",
+				"2BC7D17A",
 				" TRAP is"
 			],
 			"hits": [
@@ -78,6 +81,6 @@
 			]
 		}
 	],
-	"updt": 1568769438870,
-	"edit": 71
+	"updt": 1568793126104,
+	"edit": 72
 }
