--- a/unknown_cr8xej.t1_db.json
+++ b/unknown_cr8xej.t1_db.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_cr8xej.t1_db",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_cr8xej.t1_db",
 	"sector": "K_2655",
 	"sec_level": 4,
 	"date_added": 1565258632124,
-	"last_scraped": 1568778131121,
+	"last_scraped": 1570605476351,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 10,
-	"next_scrape": 1568819855228,
+	"next_scrape": 1570648157925,
 	"category": "plant_sim",
-	"last_update": 1568778131121,
+	"last_update": 1570605476351,
 	"output": [
 		{
 			"args": {},
@@ -46,14 +46,17 @@
 		},
 		{
 			"args": {},
-			"calls": 28996,
+			"calls": 29781,
 			"base": "c:\"wbuk80\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"| PROG ",
 				"ROR | U",
+				"OR | TI",
 				"OR | NE",
 				"ERROR |",
+				" NETW E",
 				"RROR | P",
+				"NETW ERR",
 				"ETW ERRO"
 			],
 			"hits": [
@@ -71,8 +74,8 @@
 			]
 		}
 	],
-	"updt": 1568759063480,
-	"edit": 37,
+	"updt": 1568778236486,
+	"edit": 38,
 	"identified": [
 		{
 			"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
