--- a/uknown_lqxcau.tos.json
+++ b/uknown_lqxcau.tos.json
@@ -1,20 +1,20 @@
 {
 	"_id": "uknown_lqxcau.tos",
 	"type": "fragment",
-	"mode": "timeout",
+	"mode": "player",
 	"script": "uknown_lqxcau.tos",
 	"sector": "VNP_8719",
 	"sec_level": 2,
 	"date_added": 1563655759056,
-	"last_scraped": 1568821438189,
+	"last_scraped": 1570605949035,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1563655759056
 		}
 	],
-	"updt": 1568812743879,
-	"edit": 39,
+	"updt": 1568821544828,
+	"edit": 40,
 	"pl_output": "Welcome to `FTown Of Salem` `2Hackmud Edition`!\nThis is an interface guide. Game guide: `1http://town-of-``1salem``1.wikia``1.com/wiki/Getting_Started`\n\n`FLobby`\nTo queue up for a game, use `Nqueue`: `Vtrue`.\nThe game will start automatically when 15 players queue up.\nIf you are the host, you can start the game early, once there are at least 4 players, you can manually start the game with `Nstart`: `Vtrue`.\n\n`FDay`\nTo vote, use `Nvote`: `0<player #>`",
-	"next_scrape": 1568910033190
+	"next_scrape": 1570686809672
 }
