--- a/uknown_lx2epa.bbs.json
+++ b/uknown_lx2epa.bbs.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_lx2epa.bbs",
 	"type": "fragment",
-	"mode": "timeout",
+	"mode": "player",
 	"script": "uknown_lx2epa.bbs",
 	"sector": "K_5861",
 	"sec_level": 4,
 	"date_added": 1561431825883,
-	"last_scraped": 1568735980350,
+	"last_scraped": 1570604883162,
 	"script_log": [
 		{
 			"type": "added",
@@ -26,7 +26,7 @@
 		]
 	],
 	"pl_output": "{\"ok\":false,\"msg\":\"Please give me a `Nmode` : `V\\\"read\\\"` or `V\\\"write\\\"` to proceed.\"}",
-	"next_scrape": 1568828764941,
-	"updt": 1568719578400,
-	"edit": 104
+	"next_scrape": 1570687807574,
+	"updt": 1568736100171,
+	"edit": 105
 }
