--- a/unknown_puquph.game.json
+++ b/unknown_puquph.game.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_puquph.game",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_puquph.game",
 	"sector": "NGC_2512",
 	"sec_level": 4,
 	"date_added": 1559517678336,
-	"last_scraped": 1568757676213,
+	"last_scraped": 1570605335551,
 	"script_log": [
 		{
 			"type": "added",
@@ -21,23 +21,29 @@
 			}
 		]
 	],
-	"updt": 1568746473624,
-	"edit": 324,
+	"updt": 1568757710300,
+	"edit": 325,
 	"pl_output": "hello world! make sure not to eat a lot of poop because poop is unhealthy",
-	"next_scrape": 1568798910660,
+	"next_scrape": 1570649965927,
 	"scrape_ct": 17,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1568757676213,
+	"last_update": 1570605335551,
 	"output": [
 		{
 			"args": {},
-			"calls": 4498290,
+			"calls": 4707014,
 			"base": "hello world! make sure not to eat a lot of poop because poop is unhealthy",
 			"fragments": [
+				" and ",
+				"st acc",
 				"nd 'la",
-				"mask '",
+				"k 'las",
 				"on' tim",
+				"last ac",
 				"ction' ",
+				"ccess' ",
+				" mask '",
+				" access",
 				"mestamps",
 				"ast acti"
 			],
