--- a/unknown_b8wg6g.protector.json
+++ b/unknown_b8wg6g.protector.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_b8wg6g.protector",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_b8wg6g.protector",
 	"sector": "HJG_2788",
 	"sec_level": 4,
 	"date_added": 1563132582095,
-	"last_scraped": 1568829411162,
+	"last_scraped": 1570606089287,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1563132582095
 		}
 	],
-	"next_scrape": 1568875694285,
+	"next_scrape": 1570651845113,
 	"category": "coin_flipper",
-	"last_update": 1568829411162,
+	"last_update": 1570606089287,
 	"output": [
 		{
 			"args": {},
-			"calls": 1901500,
+			"calls": 1910888,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"sus t",
@@ -29,14 +29,19 @@
 				"re fou",
 				"nsensu",
 				"miles ",
+				"h you ",
+				" be su",
 				"ung by ",
 				"smile.'",
+				"s not a",
 				"s conse",
 				"ile.' '",
 				"e fifth",
 				" that t",
 				" pictur",
-				"t there "
+				"you foun",
+				"t there ",
+				" consens"
 			],
 			"hits": [
 				{
@@ -70,6 +75,6 @@
 			]
 		}
 	],
-	"updt": 1568821093418,
-	"edit": 169
+	"updt": 1568829440477,
+	"edit": 170
 }
