--- a/unknown_ywicgz.bot_brain.json
+++ b/unknown_ywicgz.bot_brain.json
@@ -1,21 +1,21 @@
 {
 	"_id": "unknown_ywicgz.bot_brain",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_ywicgz.bot_brain",
 	"sector": "K_2655",
 	"sec_level": 4,
 	"date_added": 1565132603473,
-	"last_scraped": 1568832430335,
+	"last_scraped": 1570606149364,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565132603473
 		}
 	],
-	"next_scrape": 1568872456591,
+	"next_scrape": 1570652623724,
 	"category": "plant_sim",
-	"last_update": 1568832430335,
+	"last_update": 1570606149364,
 	"output": [
 		{
 			"args": {},
@@ -51,15 +51,17 @@
 		},
 		{
 			"args": {},
-			"calls": 84406,
+			"calls": 85796,
 			"base": "c:\"uvt0kv\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
-				"at th",
 				"utolog",
 				"thinks",
 				"hinks ",
+				"design",
 				" hard ",
+				"ugh to ",
 				"d enoug",
+				"at thin",
 				"in an AI",
 				" an AI t",
 				" Saleem."
@@ -106,6 +108,6 @@
 			]
 		}
 	],
-	"updt": 1568824025468,
-	"edit": 99
+	"updt": 1568832598533,
+	"edit": 100
 }
