--- a/unknown_z0zxqu.xkcd.json
+++ b/unknown_z0zxqu.xkcd.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_z0zxqu.xkcd",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_z0zxqu.xkcd",
 	"sector": "NGC_7257",
 	"sec_level": 4,
 	"date_added": 1565401172719,
-	"last_scraped": 1568833305078,
+	"last_scraped": 1570606160837,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 5,
-	"next_scrape": 1568877027682,
+	"next_scrape": 1570652732594,
 	"category": "plant_sim",
-	"last_update": 1568833305078,
+	"last_update": 1570606160837,
 	"output": [
 		{
 			"args": {},
@@ -44,11 +44,13 @@
 		},
 		{
 			"args": {},
-			"calls": 106971,
+			"calls": 107517,
 			"base": "c:\"ajebl6\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
-				"W ERR",
-				" | NET",
+				"OG ERR",
+				"RROR | ",
+				"R | NET",
+				"ETW ERR",
 				" PROG E",
 				"G ERROR ",
 				" ERROR |"
@@ -79,6 +81,6 @@
 			]
 		}
 	],
-	"updt": 1568824702048,
-	"edit": 118
+	"updt": 1568833502701,
+	"edit": 119
 }
