--- a/unknown_0pkjh3.trust.json
+++ b/unknown_0pkjh3.trust.json
@@ -1,34 +1,42 @@
 {
 	"_id": "unknown_0pkjh3.trust",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_0pkjh3.trust",
 	"sector": "K_7459",
 	"sec_level": 4,
 	"date_added": 1564357522436,
-	"last_scraped": 1568839515525,
+	"last_scraped": 1570606263007,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564357522436
 		}
 	],
-	"next_scrape": 1568885504536,
+	"next_scrape": 1570648451063,
 	"category": "dice_roller",
-	"last_update": 1568839515525,
+	"last_update": 1570606263007,
 	"output": [
 		{
 			"args": {},
-			"calls": 1872411,
+			"calls": 1875425,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"sy to",
 				"s adv",
+				"ore c",
 				"nt be",
 				"g pro",
 				"t that",
 				"omplic",
-				" the m"
+				"ehavio",
+				" the m",
+				" senti",
+				"n the n",
+				"d it is",
+				"might be",
+				"apient b",
+				" no acci"
 			],
 			"hits": [
 				{
@@ -60,6 +68,6 @@
 			]
 		}
 	],
-	"updt": 1568831697272,
-	"edit": 164
+	"updt": 1568839592480,
+	"edit": 165
 }
