--- a/derelict_clrnxi.donate.json
+++ b/derelict_clrnxi.donate.json
@@ -1,21 +1,21 @@
 {
 	"_id": "derelict_clrnxi.donate",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "derelict_clrnxi.donate",
 	"sector": "SPC_4267",
 	"sec_level": 4,
 	"date_added": 1565382488474,
-	"last_scraped": 1568862937451,
+	"last_scraped": 1570659655941,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565382488474
 		}
 	],
-	"next_scrape": 1568903487045,
+	"next_scrape": 1570701407661,
 	"category": "plant_sim",
-	"last_update": 1568862937451,
+	"last_update": 1570659655941,
 	"output": [
 		{
 			"args": {},
@@ -43,14 +43,20 @@
 		},
 		{
 			"args": {},
-			"calls": 70445,
+			"calls": 71344,
 			"base": "c:\"wz0fyi\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
+				"A_SEC",
 				"7_FIL",
+				"2BC7D",
+				"60 TRA",
+				"LST0X7A",
+				"D032160",
 				"FILE0X2B",
 				"A\\nAD032",
 				"0XBF_CLS",
-				" TRAP is"
+				" TRAP is",
+				"BC7D17A\\n"
 			],
 			"hits": [
 				{
@@ -78,6 +84,6 @@
 			]
 		}
 	],
-	"updt": 1568855602391,
-	"edit": 84
+	"updt": 1568863051203,
+	"edit": 85
 }
