--- a/uknown_kicz6i.k3y_cull.json
+++ b/uknown_kicz6i.k3y_cull.json
@@ -1,29 +1,34 @@
 {
 	"_id": "uknown_kicz6i.k3y_cull",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_kicz6i.k3y_cull",
 	"sector": "K_8441",
 	"sec_level": 4,
 	"date_added": 1562011754363,
-	"last_scraped": 1568862775778,
+	"last_scraped": 1570659645542,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1562011754363
 		}
 	],
-	"next_scrape": 1568906864856,
+	"next_scrape": 1570702874616,
 	"category": "coin_flipper",
-	"last_update": 1568862775778,
+	"last_update": 1570659645542,
 	"output": [
 		{
 			"args": {},
-			"calls": 2981115,
+			"calls": 2989113,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
+				"s' mi",
+				"l lik",
 				"el li",
+				"ases.",
 				"Or ph",
+				"ry - t",
+				"ogies'",
 				". Or p",
 				" sure ",
 				"ogy. So",
@@ -31,7 +36,8 @@
 				"rgraduat",
 				"e an und",
 				"analogy.",
-				"Honestly"
+				"Honestly",
+				" be the "
 			],
 			"hits": [
 				{
@@ -69,6 +75,6 @@
 			]
 		}
 	],
-	"updt": 1568855377879,
-	"edit": 288
+	"updt": 1568862825381,
+	"edit": 289
 }
