--- a/uknown_pg7a89.q.json
+++ b/uknown_pg7a89.q.json
@@ -1,36 +1,43 @@
 {
 	"_id": "uknown_pg7a89.q",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_pg7a89.q",
 	"sector": "K_5861",
 	"sec_level": 4,
 	"date_added": 1564862745653,
-	"last_scraped": 1568870096048,
+	"last_scraped": 1570659758073,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564862745653
 		}
 	],
-	"next_scrape": 1568910497389,
+	"next_scrape": 1570704781225,
 	"category": "coin_flipper",
-	"last_update": 1568870096048,
+	"last_update": 1570659758073,
 	"output": [
 		{
 			"args": {},
-			"calls": 1261834,
+			"calls": 1271030,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
+				"| NET",
+				"W ERR",
+				"SER m",
 				"OR | P",
 				"ILE0X0",
 				"65E_FI",
 				" ERROR",
 				"olliste",
 				"T0XE1_C",
+				"MFT0XE1",
 				"FT0XE1_",
 				"llister ",
-				"X61_SECT"
+				"_CLST0X6",
+				"X61_SECT",
+				" | TIME ",
+				" | PROG "
 			],
 			"hits": [
 				{
@@ -66,6 +73,6 @@
 			]
 		}
 	],
-	"updt": 1568863276658,
-	"edit": 110
+	"updt": 1568870266491,
+	"edit": 111
 }
