--- a/uknown_pneesb.syslog.json
+++ b/uknown_pneesb.syslog.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_pneesb.syslog",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_pneesb.syslog",
 	"sector": "NGC_1836",
 	"sec_level": 4,
 	"date_added": 1564714810021,
-	"last_scraped": 1568843455864,
+	"last_scraped": 1570659495155,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 9,
-	"next_scrape": 1568886453153,
+	"next_scrape": 1570702819825,
 	"category": "plant_sim",
-	"last_update": 1568843455864,
+	"last_update": 1570659495155,
 	"output": [
 		{
 			"args": {},
@@ -50,17 +50,24 @@
 		},
 		{
 			"args": {},
-			"calls": 140479,
+			"calls": 141213,
 			"base": "c:\"2fbkfi\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
+				"the t",
+				"disca",
 				"card t",
 				"When r",
+				"@. Whe",
 				"2 of t",
-				" is @.",
 				"hen rev",
 				"evealed",
 				"card\\n2",
-				" of the"
+				" reveal",
+				" of the",
+				"ed\\n2161",
+				" is @. W",
+				"d\\n2162 o",
+				"\\n2161 di"
 			],
 			"hits": [
 				{
@@ -101,6 +108,6 @@
 			]
 		}
 	],
-	"updt": 1568843427304,
-	"edit": 161
+	"updt": 1568843652684,
+	"edit": 162
 }
