--- a/unknown_32snxj.mag.json
+++ b/unknown_32snxj.mag.json
@@ -1,21 +1,21 @@
 {
 	"_id": "unknown_32snxj.mag",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_32snxj.mag",
 	"sector": "NGC_1836",
 	"sec_level": 4,
 	"date_added": 1564690214907,
-	"last_scraped": 1568876862971,
+	"last_scraped": 1570659837060,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564690214907
 		}
 	],
-	"next_scrape": 1568918543989,
+	"next_scrape": 1570705902020,
 	"category": "plant_sim",
-	"last_update": 1568876862971,
+	"last_update": 1570659837060,
 	"output": [
 		{
 			"args": {},
@@ -49,14 +49,22 @@
 		},
 		{
 			"args": {},
-			"calls": 64960,
+			"calls": 65543,
 			"base": "c:\"qta0g2\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
+				"t_ico",
 				"ible ",
 				"ents ",
+				"atego",
+				" <oop",
 				"two ca",
+				"sis ev",
 				"r two ",
+				"l-actu",
+				"ital-a",
+				"ble fo",
 				"unny_ic",
+				"me cris",
 				"nny_ico>",
 				"l meme c",
 				"is event"
@@ -93,6 +101,6 @@
 			]
 		}
 	],
-	"updt": 1568869588530,
-	"edit": 75
+	"updt": 1568877067375,
+	"edit": 76
 }
