--- a/unknown_hebj0c.break.json
+++ b/unknown_hebj0c.break.json
@@ -6,16 +6,16 @@
 	"sector": "NGC_7257",
 	"sec_level": 4,
 	"date_added": 1565425408880,
-	"last_scraped": 1568841158865,
+	"last_scraped": 1570659434838,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565425408880
 		}
 	],
-	"next_scrape": 1568887347454,
+	"next_scrape": 1570700054084,
 	"category": "plant_sim",
-	"last_update": 1568841158865,
+	"last_update": 1570659434838,
 	"output": [
 		{
 			"args": {},
@@ -45,15 +45,22 @@
 		},
 		{
 			"args": {},
-			"calls": 94167,
+			"calls": 95224,
 			"base": "c:\"118fu8\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
+				"in pa",
 				" be A",
+				"ming, ",
+				"manent",
 				"ay' be",
+				" this ",
 				"s part ",
 				". This ",
+				" AI: th",
+				"m of a r",
 				"ir abili",
-				"and prob"
+				"and prob",
+				" logical"
 			],
 			"hits": [
 				{
@@ -83,6 +90,6 @@
 			]
 		}
 	],
-	"updt": 1568832824991,
-	"edit": 107
+	"updt": 1568841171150,
+	"edit": 108
 }
