--- a/unknown_s65jzf.pay_respects.json
+++ b/unknown_s65jzf.pay_respects.json
@@ -1,21 +1,21 @@
 {
 	"_id": "unknown_s65jzf.pay_respects",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_s65jzf.pay_respects",
 	"sector": "VNP_7825",
 	"sec_level": 4,
 	"date_added": 1566471751373,
-	"last_scraped": 1568858827608,
+	"last_scraped": 1570659625616,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1566471751373
 		}
 	],
-	"next_scrape": 1568904842891,
+	"next_scrape": 1570706362199,
 	"category": "plant_sim",
-	"last_update": 1568858827608,
+	"last_update": 1570659625616,
 	"output": [
 		{
 			"args": {},
@@ -49,17 +49,21 @@
 		},
 		{
 			"args": {},
-			"calls": 139018,
+			"calls": 139837,
 			"base": "c:\"587sy1\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				" see.",
+				" I do",
 				"\\n2205",
+				"206 I ",
 				"205 It",
-				"tter if",
-				"ry\\n220",
 				"r if I ",
 				"\\n2206 ",
-				"05 It's"
+				"05 It's",
+				". Goodb",
+				"ry\\n2206",
+				"etter if",
+				"allory\\n"
 			],
 			"hits": [
 				{
@@ -93,6 +97,6 @@
 			]
 		}
 	],
-	"updt": 1568851317588,
-	"edit": 180
+	"updt": 1568858989088,
+	"edit": 181
 }
