--- a/uknown_9j64nk.birb.json
+++ b/uknown_9j64nk.birb.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_9j64nk.birb",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_9j64nk.birb",
 	"sector": "SPC_9089",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1564446964388
+		},
+		{
+			"type": "died",
+			"when": 1570659416904
 		}
 	],
 	"scrape_ct": 16,
@@ -122,8 +126,8 @@
 			]
 		}
 	],
-	"updt": 1568729729912,
-	"edit": 9,
+	"updt": 1570602128402,
+	"edit": 10,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
