--- a/unknown_etjdee.render.json
+++ b/unknown_etjdee.render.json
@@ -1,23 +1,23 @@
 {
 	"_id": "unknown_etjdee.render",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_etjdee.render",
 	"sector": "K_2748",
 	"sec_level": 4,
 	"date_added": 1564168295048,
-	"last_scraped": 1568861982451,
+	"last_scraped": 1570659635752,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564168295048
 		}
 	],
-	"updt": 1568854701547,
-	"edit": 181,
-	"next_scrape": 1568907427632,
+	"updt": 1568862149391,
+	"edit": 182,
+	"next_scrape": 1570701566579,
 	"category": "plant_sim",
-	"last_update": 1568861982451,
+	"last_update": 1570659635752,
 	"output": [
 		{
 			"args": {},
@@ -236,15 +236,23 @@
 		},
 		{
 			"args": {},
-			"calls": 48925,
+			"calls": 49475,
 			"base": "c:\"5czxxn\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
+				"ts of",
 				"r exa",
+				"e a c",
+				"d org",
+				" town",
 				" She ",
 				"r block",
+				"e is ad",
 				"as a fu",
+				"re so. T",
 				"her desi",
-				"build an"
+				"build an",
+				"additive",
+				" data - "
 			],
 			"hits": [
 				{
